grammar.js
        gsql: $ => repeat($._definition),

        _definition: $ => seq(
            choice(
                $.create_query,
                $.interpret_query
            ),
            $.query_body
        ),

        //tested
        create_query: $ => seq(
            caseInsensitive("create"),
            optional(
                seq(caseInsensitive("or"), caseInsensitive("replace"))
            ),
            optional(caseInsensitive("distributed")),
            caseInsensitive("query"),
            field("queryName", $.name),
            $.parameter_list,
            caseInsensitive("for"),
            caseInsensitive("graph"),
            field("graphName", $.name),
            optional(
                seq(caseInsensitive("syntax"), caseInsensitive("v2"))
            ),
        ),


        //tested
        parameter_list: $ => seq(
            "(",
            repeat($.query_params),
            ")"
        ),

        //tested
        query_body: $ =>
            seq(
                "{",
                repeat($.typedef),
                // optional($.declaration_except_stmts),
                repeat($.query_body_stmts),
                "}"
            ),

        //tested
        query_body_stmts: $ => seq(
            $.query_body_stmt,
            ';'
        ),

        query_body_stmt: $ => choice(
            $.decl_stmt, // tested
            $.assign_stmt, // tested
            $.v_set_var_decl_stmt, // tested
            $.l_accum_assign_stmt, // tested
            $.g_accum_assign_stmt, // tested
            $.g_accum_accum_stmt, // tested
            $.func_call_stmt, // tested
            $._select_stmt, // tested
            $.query_body_case_stmt, //tested
            $.query_body_if_stmt, //tested
            $.query_body_while_stmt, // tested
            $.query_body_for_each_stmt, //tested
            // caseInsensitive("break"),
            // caseInsensitive("continue"),
            // updateStmt ,
            // insertStmt ,
            // queryBodyDeleteStmt ,
            $.print_stmt, //tested
            // printlnStmt ,
            // logStmt ,
            // returnStmt, 
            // raiseStmt ,
            // tryStmt 
        ),

        //tested
        assign_stmt: $ => choice(
            seq($.name, "=", $.expr),
            seq($.name, ".", $.name, "=", $.expr)
        ),

        //tested
        l_accum_assign_stmt: $ => seq(
            field('vertexAlias', $.name),
            ".",
            $.local_accum_name,
            choice("+=", "="),
            $.expr
        ),

        //tested
        g_accum_assign_stmt: $ => prec(1, seq(
            $.global_accum_name,
            choice("+=", "="),
            $.expr
        )),

        //tested
        g_accum_accum_stmt: $ => seq(
            $.global_accum_name,
            field("plus_equal", "+="),
            $.expr
        ),

        //tested
        func_call_stmt: $ => choice(
            seq(
                $.name,
                optional(seq(
                    "<",
                    $._type,
                    repeat(seq(",", $._type)),
                    ">"
                )),
                "(",
                optional($.arg_list),
                ")"
            ),
            seq(
                choice($.name, $.local_accum_name, $.global_accum_name),
                repeat1(seq(".", $.name, "(", optional($.arg_list), ")")
                )
            )
        ),

        _select_stmt: $ => choice(
            $.gsql_select_block,
            // $.sqlSelectBlock 
        ),

        gsql_select_block: $ => seq(
            $.gsql_select_clause,
            $.from_clause,
            // optional($.sample_clause),
            optional($.where_clause), 
            optional($.accum_clause), 
            repeat($.post_accum_clause), 
            // optional($.having_clause),
            // optional($.order_clause),
            optional($.limit_clause),
        ),

        gsql_select_clause: $ => seq(
            $.name,
            "=",
            caseInsensitive("select"),
            field("alias", $.name)
        ),

        from_clause: $ => seq(
            caseInsensitive("from"),
            choice(
                $.step,
                seq($.path_pattern, repeat(seq(",", $.path_pattern))),
                $.step_v2, // this could probably be integrated into path pattern
            )
        ),

        accum_clause: $ => seq(
            // optinal(perClauseV2),
            caseInsensitive("accum"),
            $.dml_sub_stmt_list
        ),

        dml_sub_stmt_list: $ => seq(
            $.dml_sub_stmt,
            repeat(seq(",", $.dml_sub_stmt))
        ),

        dml_sub_stmt: $ => choice(
            $.assign_stmt, 
            $.func_call_stmt,
            $.g_accum_accum_stmt,
            $.l_accum_accum_stmt,
            $.attr_accum_stmt, 
            $.v_accum_func_call,
            $.local_var_decl_stmt,
            $.dml_sub_case_stmt,
            $.dml_sub_if_stmt, 
            $.dml_sub_while_stmt,
            $.dml_sub_for_each_stmt,
            // caseInsensitive("break"),
            // caseInsensitive("continue"),
            // insertStmt,
            // dmlSubDeleteStmt,
            // printlnStmt,
            // logStmt
        ),

        l_accum_accum_stmt: $ => seq(
            $.name,
            ".",
            $.local_accum_name,
            field("plus_equal", "+="),
            $.expr
        ),

        attr_accum_stmt: $ => seq(
            $.name,
            ".",
            $.name,
            field("plus_equal", "+="),
            $.expr
        ),

        v_accum_func_call: $ => seq(
            field('vertexAlias', $.name),
            ".",
            field('localAccumName', $.local_accum_name),
            repeat(seq(
                ".",
                field("funcName", $.name),
                "(",
                optional($.arg_list),
                ")"
            ))
        ),
        local_var_decl_stmt: $ => seq(
            $.base_type,
            field("varName", $.name),
            "=",
            $.expr
        ),

        dml_sub_if_stmt: $ =>  
            seq(
            caseInsensitive("if"),
            $.condition,
            caseInsensitive("then"),
            $.dml_sub_stmt_list,
            repeat(prec.left(1,
                seq(
                    caseInsensitive("else"),
                    caseInsensitive("if"), 
                    $.condition, 
                    caseInsensitive("then"), 
                    $.dml_sub_stmt_list
                ))),
            optional(seq(caseInsensitive("else"), $.dml_sub_stmt_list)),
            caseInsensitive("end")
        ),

        dml_sub_case_stmt: $ => //choice(
            seq(
                caseInsensitive("case"),
                repeat1(seq(caseInsensitive("when"), $.condition, caseInsensitive("then"), $.dml_sub_stmt_list)),
                optional(seq(caseInsensitive("else"), $.dml_sub_stmt_list)),
                caseInsensitive("end")
            ),
            // seq(
            //     caseInsensitive("case"),
            //     $.expr,
            //     repeat1(seq(caseInsensitive("when"), $.constant, caseInsensitive("then"), $.dml_sub_stmt_list)),
            //     optional(seq(caseInsensitive("else"), $.dml_sub_stmt_list)),
            //     caseInsensitive("end")
            // )
        //),

        dml_sub_while_stmt: $ => seq(
            caseInsensitive("while"),
            $.condition,
            optional(seq(caseInsensitive("limit"), $.simple_size)),
            caseInsensitive("do"),
            $.dml_sub_stmt_list,
            caseInsensitive("end")
        ),

        dml_sub_for_each_stmt: $ => seq(
            caseInsensitive("foreach"),
            $.for_each_control,
            caseInsensitive("do"),
            $.dml_sub_stmt_list,
            caseInsensitive("end")
        ),

        for_each_control: $ => choice(
            seq(
                choice(
                    field("iterationVar", choice($.name, $.local_accum_name, $.global_accum_name)),
                    seq("(", field("keyVar", $.name), repeat1(seq(",", field("valueVar", $.name))), ")")
                ),
                seq(choice(caseInsensitive("in"), ":"), 
                $.set_bag_expr)
            ),
            seq(
                field("iterationVar", choice($.name, $.local_accum_name, $.global_accum_name)),
                caseInsensitive("in"),
                caseInsensitive("range"),
                "[",
                $.expr,
                ",",
                $.expr,
                "]",
                optional(seq(".", caseInsensitive("step"), "(", $.expr, ")")))
        ),

        path_pattern: $ => prec(1, seq(
            $.step_source_set,
            repeat(seq(
                "-",
                "(",
                $.path_edge_pattern,
                optional(seq(":", field("edgeAlias", $.name))),
                ")",
                "-",
                $.step_vertex_set
            ))
        )),

        step_source_set: $ => prec(1, seq(
            field('vertexSetName', $.name),
            optional(seq(":", field("vertexAlias", $.name)))
        )),

        global_accum_name: $ => seq(
            "@@",
            $.name
        ),

        //tested
        local_accum_name: $ => seq(
            "@",
            $.name
        ),

        arg_list: $ => seq(
            $.expr,
            repeat(seq(",", $.expr))
        ),

        simple_size: $ => choice(
            repeat1($.digit),
            $.name
        ),

        expr: $ => prec.left(5, choice(
            $.name,
            $.global_accum_name,
            // seq($.name, ".", $.name),
            // seq($.name, ".", $.local_accum_name),
            $.name_dot,
            seq($.name, ".", $.name, ".", $.name, "(", optional($.arg_list), ")"),
            seq($.name, ".", $.name, "(", optional($.arg_list), ")", optional(seq(".", caseInsensitive("filter"), "(", $.condition, ")"))),
            // seq($.name, optional(seq("<", $._type, repeat(seq(",", $._type)), ">")), "(", optional(seq($.arg_list, ")"))),
            // seq($.name, ".", $.local_accum_name, repeat1(seq(".", $.name, "(", optional($.arg_list), ")")), optional(seq(".", $.name))),
            // seq($.global_accum_name, repeat1(seq(".", $.name, "(", optional($.arg_list), ")")), optional(seq(".", $.name))),
            seq(caseInsensitive("coalesce"), "(", optional($.arg_list), ")"),
            seq($.aggregator, "(", optional(caseInsensitive("distinct")), $.set_bag_expr, ")"),
            seq(caseInsensitive("isempty"), "(", $.set_bag_expr, ")"),
            prec.left(2, seq($.expr, $.math_operator, $.expr)),
            prec.left(1, seq("-", $.expr)),
            seq("(", $.expr, ")"),
            seq("(", $.arg_list, "->", $.arg_list, ")"),
            seq("[", $.arg_list, "]"),
            $.constant,
            $.set_bag_expr,
            $.func_call_stmt // seq($.name, "(", $.arg_list, ")"),
        )),

        condition: $ => prec.left(1, choice(
            $.expr,
            seq($.expr, $.comparison_operator, $.expr),
            seq($.expr, optional(caseInsensitive("not")), caseInsensitive("in"), $.set_bag_expr),
            seq($.expr, caseInsensitive("is"), optional(caseInsensitive("not")), caseInsensitive("null")),
            seq($.expr, caseInsensitive("between"), $.expr, caseInsensitive("and"), $.expr),
            seq("(", $.condition, ")"),
            seq(caseInsensitive("not"), $.condition),
            seq($.condition, choice(caseInsensitive("and"), caseInsensitive("or")), $.condition),
            choice(caseInsensitive("true"), caseInsensitive("false")),
            seq($.expr, optional(caseInsensitive("not")), caseInsensitive("like"), $.expr)
        )),

        set_bag_expr: $ => prec.left(0, choice(
            $.name,
            $.global_accum_name,
            // seq($.name, ".", $.name),
            // seq($.name, ".", $.local_accum_name),
            $.name_dot,
            seq($.name_dot, repeat(seq(".", $.name, "(", optional($.arg_list), ")"))),
            // seq($.name, ".", $.name, "(", optional($.arg_list), ")", optional(seq(".", caseInsensitive("filter"), "(", $.condition, ")"))),
            // seq($.global_accum_name, repeat(seq(".", $.name, "(", optional($.arg_list), ")"))),
            seq($.set_bag_expr, choice(caseInsensitive("union"), caseInsensitive("intersect"), caseInsensitive("minus")), $.set_bag_expr),
            seq("(", $.arg_list, ")"),
            seq("(", $.set_bag_expr, ")")
        )),

        name_dot: $ => prec.left(1, seq(
            $.name,
            ".",
            choice($.name, $.local_accum_name),
            repeat(seq(".", $.name))
        )),

        _type: $ => choice(
            $.base_type
        ),

        base_type: $ => choice(
            caseInsensitive("bool"),
            caseInsensitive("int"),
            caseInsensitive("uint"),
            caseInsensitive("float"),
            caseInsensitive("double"),
            caseInsensitive("string"),
            seq(caseInsensitive("vertex"), optional(seq("<", $.name, ">"))),
            caseInsensitive("edge"),
            caseInsensitive("jsonobject"),
            caseInsensitive("jsonarray"),
            caseInsensitive("datetime")
        ),

        name: $ => /[\p{L}_$][\p{L}\p{Nd}_$]*/, // thanks, java --> https://github.com/tree-sitter/tree-sitter-java/blob/master/grammar.js#:~:text=%5B%5Cp%7BL%7D_%24%5D%5B%5Cp%7BL%7D%5Cp%7BNd%7D_%24%5D*
        // name: $ => { // thanks, js --> https://github.com/tree-sitter/tree-sitter-javascript/blob/master/grammar.js
        // 	const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/
        // 	const alphanumeric = /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/
        // 	return token(seq(alpha, repeat(alphanumeric)))
        // },

        constant: $ => choice(
            $.numeric,
            $.string_literal,
            caseInsensitive("true"),
            caseInsensitive("false"),
            caseInsensitive("gsql_uint_max"),
            caseInsensitive("gsql_int_max"),
            caseInsensitive("gsql_uint_min"),
        ),

        numeric: $ => choice(
            $.integer,
            $.real
        ),

        integer: $ => seq(
            optional('-'),
            $.digit
        ),

        real: $ => choice(
            seq(optional("-"), seq(".", repeat1($.digit))),
            seq(optional("-"), $.digit, seq(".", $.digit)),
        ),

        digit: $ => /\d+/,

        string_literal: $ => choice(
            seq(
                '"',
                repeat(/[^"&]/),
                '"'
            ), seq(
                '\'',
                repeat(/[^'&]/),
                '\''
            )
        ),
        math_operator: $ => choice(
            "*",
            "/",
            "%",
            "+",
            "-",
            "<<",
            ">>",
            "&",
            " | "
        ),

        comparison_operator: $ => choice(
            "<",
            "<=",
            ">",
            ">=",
            "==",
            "!="
        ),

        // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
